# Passlama

./: Anchor.toml  Passlama.py  README.md  convert_key.py  encryption_key.txt  index.html  main.py  payer.json  phantom_public_key.txt  qr_login.py  requirements.txt  sdasds.py  storage_account.py  вфівіф.py
accounts/: phantom_integration.py  storage_account.py
accounts/crypto/: encryption_key.txt  payer.json  storage_account.json
crypto/: encryption.py  encryption_key.txt  payer.json  storage_account.json
cryptod/: encryption_key.txt  payer.json  storage_account.json
programs/password-vault/: Cargo.toml
programs/password-vault/src/: lib.rs
ui/: welcome_window.py
